--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/layout/header/index.js", "app/layout/footer/index.js"],
   "exclude": ["node_modules"],
   "theme": {
     "extend": {
