--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
-  "less.lint.unknownAtRules": "ignore"
+  "less.lint.unknownAtRules": "ignore",
+  "editor.inlineSuggest.enabled": false,
+  "github.copilot.enable": {
+  "*": false,
+  "javascript": false,
+  "typescript": false
+  }
 }
